force-app/main/default/objects/Account/fields/Diversification_tag__c.field-meta.xml
<CustomField>
    <fullName>Diversification_tag__c</fullName>
    <formula>If(OR(
INCLUDES(   Type_of_product__c  , &quot;Entertainment&quot;),
INCLUDES(   Type_of_product__c  , &quot;Audio&quot;),
INCLUDES(   Type_of_product__c  , &quot;Large Appliances&quot;),
INCLUDES(   Type_of_product__c  , &quot;Cleaning&quot;),
INCLUDES(   Type_of_product__c  , &quot;Accessories&quot;),
INCLUDES(   Type_of_product__c  , &quot;Connected Devices&quot;),
INCLUDES(   Type_of_product__c  , &quot;Small Appliances&quot;),
INCLUDES(   Type_of_product__c  , &quot;Photos &amp; Video&quot;),
INCLUDES(   Type_of_product__c  , &quot;Connected Devices&quot;),
INCLUDES(   Type_of_product__c  , &quot;Mobility&quot;),
INCLUDES(   Type_of_product__c  , &quot;Tools&quot;),
INCLUDES(   Type_of_product__c  , &quot;Gardening&quot;),
INCLUDES(   Type_of_product__c  , &quot;Beauty And Spa&quot;)), &quot;Other Diversification&quot;, 



IF (OR(INCLUDES(  Type_of_product__c  , &quot;MacBook&quot;),
INCLUDES(   Type_of_product__c  , &quot;Tablet&quot;),
INCLUDES(   Type_of_product__c  , &quot;Earphones&quot;),
INCLUDES(   Type_of_product__c  , &quot;iMac&quot;),
INCLUDES(   Type_of_product__c  , &quot;Computer &amp; Co&quot;),
INCLUDES(   Type_of_product__c  , &quot;Apple Watch&quot;)) ,  &quot;Core Electronics&quot;, &quot;Smartphones&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diversification tag</label>
    <type>Text</type>
</CustomField>