force-app/main/default/objects/Account/fields/DMP__c.field-meta.xml
<CustomField>
    <fullName>DMP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the merchant a dead one, or currently in a dead merchant process ?</inlineHelpText>
    <label>DMP</label>
    <type>Checkbox</type>
</CustomField>