force-app/main/default/objects/Account/fields/eBay_ID__c.field-meta.xml
<CustomField>
    <fullName>eBay_ID__c</fullName>
    <label>eBay ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>