force-app/main/default/objects/Account/fields/EORI_EU_only__c.field-meta.xml
<CustomField>
    <fullName>EORI_EU_only__c</fullName>
    <inlineHelpText>It is the compulsory custom number for import/export</inlineHelpText>
    <label>EORI (EU only)</label>
    <type>TextArea</type>
</CustomField>