force-app/main/default/objects/Account/fields/EPR_DE_Compliant__c.field-meta.xml
<CustomField>
    <fullName>EPR_DE_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPR DE Compliant</label>
    <type>Checkbox</type>
</CustomField>