force-app/main/default/objects/Account/fields/Exit_Buyback_Granted__c.field-meta.xml
<CustomField>
    <fullName>Exit_Buyback_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit Buyback Granted</label>
    <type>Checkbox</type>
</CustomField>