force-app/main/default/objects/Account/fields/Exit_granted__c.field-meta.xml
<CustomField>
    <fullName>Exit_granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit granted</label>
    <type>Checkbox</type>
</CustomField>