force-app/main/default/objects/Account/fields/F_B_B_M_V2__c.field-meta.xml
<CustomField>
    <fullName>F_B_B_M_V2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F.B.B.M V2</label>
    <type>Checkbox</type>
</CustomField>