force-app/main/default/objects/Account/fields/False_Start_used__c.field-meta.xml
<CustomField>
    <fullName>False_Start_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>False Start used</label>
    <type>Checkbox</type>
</CustomField>