force-app/main/default/objects/Account/fields/Fatness__c.field-meta.xml
<CustomField>
    <fullName>Fatness__c</fullName>
    <inlineHelpText>This field is mandatory to move from Identification to first contact!</inlineHelpText>
    <label>Fatness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>