force-app/main/default/objects/Account/fields/Fatness_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Fatness_Shadow__c</fullName>
    <description>This field is used to fill the Fatness Field if its value is empty thanks to Process Builder.</description>
    <formula>IF ( OR ( ISPICKVAL ( AccountSource, &quot;Entrant Lead&quot; ),
          AND ( ISPICKVAL ( Profile__c, &quot;Classic&quot; ), 
                OR ( ISPICKVAL ( AccountSource, &quot;S.E.O.&quot; ), 
                     ISPICKVAL ( AccountSource, &quot;S.E.A.&quot; ), 
                     ISPICKVAL ( AccountSource, &quot;Market Place Benchmark&quot; ) 
                   ) 
              ) 
        ), 
     3, 
     IF ( OR ( AND ( ISPICKVAL ( Profile__c, &quot;Buyback&quot; ),
                     OR ( ISPICKVAL ( AccountSource, &quot;S.E.O.&quot; ), 
                          ISPICKVAL ( AccountSource, &quot;Offline Event&quot; )
                        ) 
                   ),
               AND ( ISPICKVAL ( Profile__c, &quot;Classic&quot; ), 
                     OR ( ISPICKVAL ( AccountSource, &quot;Flash Sales Website&quot; ), 
                          ISPICKVAL ( AccountSource, &quot;Offline Event&quot; ) 
                        ) 
                   ), 
               AND ( OR ( ISPICKVAL ( Profile__c, &quot;Classic&quot; ), 
                          ISPICKVAL ( Profile__c, &quot;Buyback&quot; )
                        ),
                     ISPICKVAL ( AccountSource, &quot;Referral&quot; )
                   )
             ), 
          2, 
          IF ( OR ( AND ( ISPICKVAL ( Profile__c, &quot;Classic&quot; ), 
                          ISPICKVAL ( AccountSource, &quot;Market Place Mapping&quot; ) 
                        ),
                    OR ( ISPICKVAL ( Profile__c, &quot;Brand&quot; ),
                         ISPICKVAL ( Profile__c, &quot;Retailer&quot; ) 
                       )
                  ), 
               1, 
               0
             )
         ) 
   )</formula>
    <label>Fatness (Shadow)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>