force-app/main/default/objects/Account/fields/FBBM_Stage__c.field-meta.xml
<CustomField>
    <fullName>FBBM_Stage__c</fullName>
    <label>F.B.B.M. Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>