force-app/main/default/objects/Account/fields/Financial_Email__c.field-meta.xml
<CustomField>
    <fullName>Financial_Email__c</fullName>
    <description>one email address, defined by the merchant in BO</description>
    <label>Financial Email</label>
    <type>Email</type>
</CustomField>