force-app/main/default/objects/Account/fields/First_contact_on__c.field-meta.xml
<CustomField>
    <fullName>First_contact_on__c</fullName>
    <label>First contact on</label>
    <type>Date</type>
</CustomField>