force-app/main/default/objects/Account/fields/Force__c.field-meta.xml
<CustomField>
    <fullName>Force__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow to pass through some controls during creation or modification of record.</description>
    <label>Force</label>
    <type>Checkbox</type>
</CustomField>