force-app/main/default/objects/Account/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <label>Franchise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affair’s France</fullName>
            </value>
            <value>
                <fullName>Cash &amp; Cheque Express UK</fullName>
            </value>
            <value>
                <fullName>Cash &amp; Repair France</fullName>
            </value>
            <value>
                <fullName>Cash Brokers UK</fullName>
            </value>
            <value>
                <fullName>Cash Converters Belgium</fullName>
            </value>
            <value>
                <fullName>Cash Converters France</fullName>
            </value>
            <value>
                <fullName>Cash Converters Spain</fullName>
            </value>
            <value>
                <fullName>Cash Converters Switzerland</fullName>
            </value>
            <value>
                <fullName>Cash Converters UK</fullName>
            </value>
            <value>
                <fullName>Cash Express France</fullName>
            </value>
            <value>
                <fullName>Cash Generator UK</fullName>
            </value>
            <value>
                <fullName>CeX Webuy Italy</fullName>
            </value>
            <value>
                <fullName>CeX Webuy Portugal</fullName>
            </value>
            <value>
                <fullName>CeX Webuy Spain</fullName>
            </value>
            <value>
                <fullName>CeX Webuy UK</fullName>
            </value>
            <value>
                <fullName>Cybertek France</fullName>
            </value>
            <value>
                <fullName>Docteur IT France</fullName>
            </value>
            <value>
                <fullName>Dynamite Games France</fullName>
            </value>
            <value>
                <fullName>E.Leclerc</fullName>
            </value>
            <value>
                <fullName>Easy Cash France</fullName>
            </value>
            <value>
                <fullName>ELECTRO DEPOT France</fullName>
            </value>
            <value>
                <fullName>Fixphonia Germany</fullName>
            </value>
            <value>
                <fullName>Gamecash France</fullName>
            </value>
            <value>
                <fullName>Gamestop Germany</fullName>
            </value>
            <value>
                <fullName>GameStop Italy</fullName>
            </value>
            <value>
                <fullName>GAME UK</fullName>
            </value>
            <value>
                <fullName>Grosbill France</fullName>
            </value>
            <value>
                <fullName>Happy Cash France</fullName>
            </value>
            <value>
                <fullName>Happy Cash Services Germany</fullName>
            </value>
            <value>
                <fullName>Happy Troc Germany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>