force-app/main/default/objects/Account/fields/G_M_V_target_current_month__c.field-meta.xml
<CustomField>
    <fullName>G_M_V_target_current_month__c</fullName>
    <defaultValue>0</defaultValue>
    <description>GMV target of the merchant for the current month.</description>
    <inlineHelpText>GMV target of the merchant for the current month.</inlineHelpText>
    <label>G.M.V. target (current month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>