force-app/main/default/objects/Account/fields/Global_Weekly_forecast__c.field-meta.xml
<CustomField>
    <fullName>Global_Weekly_forecast__c</fullName>
    <label>Global Weekly forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>