force-app/main/default/objects/Account/fields/GMV_last_30_days__c.field-meta.xml
<CustomField>
    <fullName>GMV_last_30_days__c</fullName>
    <label>GMV last 30 days</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>