force-app/main/default/objects/Account/fields/Has_Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Has_Business_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether the Account can move on from Identification to Finding the right one steps or not.</description>
    <label>Has Business Contact</label>
    <type>Checkbox</type>
</CustomField>