force-app/main/default/objects/Account/fields/Has_buyback_contact__c.field-meta.xml
<CustomField>
    <fullName>Has_buyback_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has buyback contact</label>
    <type>Checkbox</type>
</CustomField>