force-app/main/default/objects/Account/fields/Has_Contact__c.field-meta.xml
<CustomField>
    <fullName>Has_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Process Builder for Stage 1 alert.</description>
    <label>Has Contact</label>
    <type>Checkbox</type>
</CustomField>