force-app/main/default/objects/Account/fields/Hunted__c.field-meta.xml
<CustomField>
    <fullName>Hunted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hunted?</label>
    <type>Checkbox</type>
</CustomField>