force-app/main/default/objects/Account/fields/IBAN_uploaded__c.field-meta.xml
<CustomField>
    <fullName>IBAN_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I.B.A.N. uploaded</label>
    <type>Checkbox</type>
</CustomField>