force-app/main/default/objects/Account/fields/ID_uploaded__c.field-meta.xml
<CustomField>
    <fullName>ID_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I.D. uploaded</label>
    <type>Checkbox</type>
</CustomField>