force-app/main/default/objects/Account/fields/Inputted_from__c.field-meta.xml
<CustomField>
    <fullName>Inputted_from__c</fullName>
    <description>Where the data were originally inputted.</description>
    <label>Inputted from</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Back-Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>