force-app/main/default/objects/Account/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrated to BM</fullName>
            </value>
            <value>
                <fullName>Integrated to other marketplaces - not BM</fullName>
            </value>
            <value>
                <fullName>Not integrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>