force-app/main/default/objects/Account/fields/Interested_in_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Buyback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Buyback</label>
    <type>Checkbox</type>
</CustomField>