force-app/main/default/objects/Account/fields/Invoice_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Audit_Date__c</fullName>
    <label>Invoice Audit Date</label>
    <type>Date</type>
</CustomField>