force-app/main/default/objects/Account/fields/Invoice_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Compliance_Status__c</fullName>
    <label>Invoice Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not audited</fullName>
                <default>true</default>
                <label>Not audited</label>
            </value>
            <value>
                <fullName>Ongoing Non-compliance Alert</fullName>
            </value>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Not compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>