force-app/main/default/objects/Account/fields/Kanban_Card_Link__c.field-meta.xml
<CustomField>
    <fullName>Kanban_Card_Link__c</fullName>
    <formula>HYPERLINK( &quot;/lightning/r/&quot; 
           &amp; IF ( ISPICKVAL ( Stage__c, &quot;Onboarding&quot;), 
                  Onboarding_Process_ID__c, 
                  IF ( ISPICKVAL ( Stage__c, &quot;N.M.O.&quot;), 
                       NMO_Process_ID__c, 
                       Id ) )  
           &amp; &quot;/view&quot;, Name, &quot;_blank&quot; )</formula>
    <label>Merchant</label>
    <type>Text</type>
</CustomField>