force-app/main/default/objects/Account/fields/KBIS_uploaded__c.field-meta.xml
<CustomField>
    <fullName>KBIS_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>K.B.I.S. uploaded</label>
    <type>Checkbox</type>
</CustomField>