force-app/main/default/objects/Account/fields/Key_player__c.field-meta.xml
<CustomField>
    <fullName>Key_player__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key player</label>
    <type>Checkbox</type>
</CustomField>