force-app/main/default/objects/Account/fields/Klarna__c.field-meta.xml
<CustomField>
    <fullName>Klarna__c</fullName>
    <label>Klarna</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>