force-app/main/default/objects/Account/fields/KYB_Scoring__c.field-meta.xml
<CustomField>
    <fullName>KYB_Scoring__c</fullName>
    <label>KYB Scoring</label>
    <length>18</length>
    <type>Text</type>
</CustomField>