force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Previous formula:
CASE(BillingCountry,
     &quot;France&quot;, &quot;French&quot;,  
     &quot;Belgium&quot;, &quot;French&quot;, 
     &quot;Spain&quot;, &quot;Spanish&quot;, 
     &quot;Germany&quot;, &quot;German&quot;, 
     &quot;China&quot;, &quot;Chinese&quot;,  
     &quot;Poland&quot;, &quot;Polish&quot;, 
     &quot;English&quot;)</description>
    <formula>IF(
OR(
ISPICKVAL(Country__c,&quot;France&quot;),
ISPICKVAL(Country__c,&quot;Luxembourg&quot;),
ISPICKVAL(Country__c,&quot;Belgium&quot;),
ISPICKVAL(Country__c,&quot;Switzerland&quot;)),&quot;French&quot;,

IF(ISPICKVAL(Country__c,&quot;Spain&quot;),&quot;Spanish&quot;,
IF (ISPICKVAL(Country__c,&quot;Portugal&quot;), &quot;Portuguese&quot;,
IF (ISPICKVAL(Country__c,&quot;Finland&quot;), &quot;Finnish&quot;,

IF(ISPICKVAL(Country__c,&quot;Italy&quot;),&quot;Italian&quot;,

IF(ISPICKVAL(Country__c,&quot;Netherlands&quot;),&quot;Dutch&quot;,

IF(ISPICKVAL(Country__c,&quot;Poland&quot;),&quot;Polish&quot;,

IF(OR(ISPICKVAL(Country__c,&quot;Germany&quot;),ISPICKVAL(Country__c,&quot;Austria&quot;)),&quot;German&quot;,

IF(OR(ISPICKVAL(Country__c,&quot;China&quot;),ISPICKVAL(Country__c,&quot;Hong Kong&quot;)),&quot;Chinese&quot;,&quot;English&quot;)))))))))</formula>
    <inlineHelpText>This field is mandatory to move from Identification to first contact!</inlineHelpText>
    <label>Language</label>
    <type>Text</type>
</CustomField>