force-app/main/default/objects/Account/fields/Last_activty_date__c.field-meta.xml
<CustomField>
    <fullName>Last_activty_date__c</fullName>
    <formula>IF(ISNULL( TECH_Last_due_date__c ), DATEVALUE(CreatedDate), TECH_Last_due_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last activty date</label>
    <type>Date</type>
</CustomField>