force-app/main/default/objects/Account/fields/Last_Breath_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Breath_Date__c</fullName>
    <description>A field used to capture the date of the last activity that was related to the merchant.</description>
    <label>Last Breath Date</label>
    <type>Date</type>
</CustomField>