force-app/main/default/objects/Account/fields/Last_Breath_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Breath_Type__c</fullName>
    <description>Field used to indicate what was the last activity related to the merchant.</description>
    <label>Last Breath Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>