force-app/main/default/objects/Account/fields/Last_Daily_Biz_Perf_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Daily_Biz_Perf_Date__c</fullName>
    <label>Last Daily Biz Perf Date</label>
    <type>Date</type>
</CustomField>