force-app/main/default/objects/Account/fields/Last_Daily_Biz_Perf_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Daily_Biz_Perf_Sales__c</fullName>
    <label>Last Daily Biz Perf Sales</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>