force-app/main/default/objects/Account/fields/last_ecommerce_revenue__c.field-meta.xml
<CustomField>
    <fullName>last_ecommerce_revenue__c</fullName>
    <label>Last ecommerce revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TINY_REVENUE</fullName>
                <label>0 - 100,000</label>
            </value>
            <value>
                <fullName>VERY_SMALL_REVENUE</fullName>
                <label>101,000 - 499,999</label>
            </value>
            <value>
                <fullName>SMALL_REVENUE</fullName>
                <label>500,000 - 999,999</label>
            </value>
            <value>
                <fullName>MEDIUM_REVENUE</fullName>
                <label>1,000,000 - 5,000,000</label>
            </value>
            <value>
                <fullName>BIG_REVENUE</fullName>
                <label>5,000,001 - 10,000,000</label>
            </value>
            <value>
                <fullName>HUGE_REVENUE</fullName>
                <label>10,100,000+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>