force-app/main/default/objects/Account/fields/Last_listings_10_flag__c.field-meta.xml
<CustomField>
    <fullName>Last_listings_10_flag__c</fullName>
    <formula>IF ( AND ( Last_Daily_Biz_Perf_Date__c &lt;&gt; NULL, 
Last_Daily_Biz_Perf_Listings__c &lt; $Setup.Sales_Settings__c.Daily_Listings_Alert_Threshold__c ) , 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Warning!&quot;, 15, 15), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;All Good&quot;, 15, 15) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last listings &lt;10 flag</label>
    <type>Text</type>
</CustomField>