force-app/main/default/objects/Account/fields/Last_Monthly_Biz_Perf_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Monthly_Biz_Perf_Date__c</fullName>
    <label>Last Monthly Biz Perf Date</label>
    <type>Date</type>
</CustomField>