force-app/main/default/objects/Account/fields/Last_Monthly_Biz_Perf_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Last_Monthly_Biz_Perf_Stocks__c</fullName>
    <label>Last Monthly Biz Perf Stocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>