force-app/main/default/objects/Account/fields/Last_Pool_to_contact_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Pool_to_contact_Change_Date__c</fullName>
    <label>Last Pool to contact Change Date</label>
    <type>Date</type>
</CustomField>