force-app/main/default/objects/Account/fields/Last_Prio_Score_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Prio_Score_Change_Date__c</fullName>
    <label>Last Prio Score Change Date</label>
    <type>Date</type>
</CustomField>