force-app/main/default/objects/Account/fields/Last_Weekly_Biz_Perf_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Weekly_Biz_Perf_Date__c</fullName>
    <label>Last Weekly Biz Perf Date</label>
    <type>Date</type>
</CustomField>