force-app/main/default/objects/Account/fields/Last_weekly_Biz_Perf_Listings__c.field-meta.xml
<CustomField>
    <fullName>Last_weekly_Biz_Perf_Listings__c</fullName>
    <label>Last weekly Biz Perf Listings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>