force-app/main/default/objects/Account/fields/Limitation__c.field-meta.xml
<CustomField>
    <fullName>Limitation__c</fullName>
    <label>Limitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>