force-app/main/default/objects/Account/fields/Limitation_to_apply_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Limitation_to_apply_Buyback__c</fullName>
    <label>Limitation to apply - Buyback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>