force-app/main/default/objects/Account/fields/Limitation_to_apply_in_Last_Chance__c.field-meta.xml
<CustomField>
    <fullName>Limitation_to_apply_in_Last_Chance__c</fullName>
    <label>Limitation to apply in Last Chance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>