force-app/main/default/objects/Account/fields/LimitationBeforeAlert__c.field-meta.xml
<CustomField>
    <fullName>LimitationBeforeAlert__c</fullName>
    <label>Sales - Limitation before alert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>