force-app/main/default/objects/Account/fields/LimitationToApplySales__c.field-meta.xml
<CustomField>
    <fullName>LimitationToApplySales__c</fullName>
    <label>Limitation to apply - Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>