force-app/main/default/objects/Account/fields/Link_to_the_main_competitor_marketplace__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_main_competitor_marketplace__c</fullName>
    <label>Link to the main competitor marketplace</label>
    <type>Url</type>
</CustomField>