force-app/main/default/objects/Account/fields/Link_to_the_site__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_site__c</fullName>
    <label>Link to the site</label>
    <type>Url</type>
</CustomField>