force-app/main/default/objects/Account/fields/Live_in_Buyback_on__c.field-meta.xml
<CustomField>
    <fullName>Live_in_Buyback_on__c</fullName>
    <label>Live in Buyback on</label>
    <type>Date</type>
</CustomField>