force-app/main/default/objects/Account/fields/Live_on_Refurbed__c.field-meta.xml
<CustomField>
    <fullName>Live_on_Refurbed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field populated by import. Update every month by Lead Gen.</inlineHelpText>
    <label>Live on Refurbed</label>
    <type>Checkbox</type>
</CustomField>