force-app/main/default/objects/Account/fields/Mail_Presentation_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Mail_Presentation_Buyback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail Onboarding sent</label>
    <type>Checkbox</type>
</CustomField>