force-app/main/default/objects/Account/fields/Manager_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Manager_Buyback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager - Buyback</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchants9</relationshipName>
    <type>Lookup</type>
</CustomField>