force-app/main/default/objects/Account/fields/Manager_Sales__c.field-meta.xml
<CustomField>
    <fullName>Manager_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager - Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchants8</relationshipName>
    <type>Lookup</type>
</CustomField>