force-app/main/default/objects/Account/fields/Marketplace_Merchant_Pseudo_3__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Merchant_Pseudo_3__c</fullName>
    <label>Marketplace Merchant Pseudo #3</label>
    <length>75</length>
    <type>Text</type>
</CustomField>