force-app/main/default/objects/Account/fields/Master_Challenging_Point__c.field-meta.xml
<CustomField>
    <fullName>Master_Challenging_Point__c</fullName>
    <label>Master Challenging Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BackWatch Potential</fullName>
            </value>
            <value>
                <fullName>Business and Quality Challenges</fullName>
            </value>
            <value>
                <fullName>Contacting &amp; Communication I</fullName>
                <isActive>false</isActive>
                <label>Contacting &amp; Communication I</label>
            </value>
            <value>
                <fullName>Contacting &amp; Communication Issues</fullName>
            </value>
            <value>
                <fullName>Need Services</fullName>
            </value>
            <value>
                <fullName>Not in our Current Strategy</fullName>
            </value>
            <value>
                <fullName>Not Relevant Account</fullName>
            </value>
            <value>
                <fullName>Not Relevant for Back Market</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>